# amazon-kinesis-producer

./: CMakeLists.txt  Jamroot.jam  README.md  bootstrap.sh  certificates.pem
aws/: build_info.h  mutex.h
aws/auth/test/: credentials_test.cc
aws/http/: io_service_socket.h
aws/http/test/: ec2_metadata_test.cc  http_client_test.cc
aws/kinesis/: main.cc  test_driver.cc
aws/kinesis/core/: configuration.h  kinesis_producer.cc  kinesis_producer.h  pipeline.h  retrier.cc
aws/kinesis/core/test/: aggregator_test.cc  shard_map_test.cc
aws/kinesis/protobuf/: config.pb.cc  config.pb.h  config.proto  messages.proto
aws/kinesis/test/: test.cc
aws/metrics/test/: metrics_manager_test.cc
aws/utils/: AwsClientExecutor.cpp  AwsClientExecutor.h  NativeThread.cc  NativeThread.h  error_translater.cc  error_translater.h  io_service_executor.cc  io_service_executor.h  logging.cc  reporting_thread.cc  reporting_thread.h  reporting_thread_executor.cc  reporting_thread_executor.h  signal_handler.cc  signal_handler.h  simple_executor.cc  simple_executor.h  thread_limiter.cc  thread_limiter.h  thread_pool_selector.cc  thread_pool_selector.h  utils.cc  writer_methods.cc  writer_methods.h
aws/utils/backtrace/: backtrace.h  bsd_backtrace.cc  gcc_backtrace.cc
aws/utils/test/: concurrent_linked_queue_test.cc  temp_ca_dir.cc  temp_ca_dir.h  terminate_handler_test.cc  terminate_handler_test.cpp
cmake/: linux.cmake  macos.cmake  nix-common.cmake  win32.cmake  zlib-build.cmake
cmake/gen-protobuf/: CMakeLists.txt
java/amazon-kinesis-producer/: pom.xml
patches/: openssl.patch
(+14 files in other folders)
